alignment fix

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -10,6 +10,16 @@ body {
   background-size: 22px 22px;
 }
 
+html {
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 0px;  /* remove scrollbar space */
+  background: transparent;  /* optional: just make scrollbar invisible */
+}
+
+
 article,
 aside,
 details,
