--- a/src/components/layout_404.css
+++ b/src/components/layout_404.css
@@ -76,7 +76,7 @@
   background: #111111;
 }
 
-body404 {
+.body404 {
   margin: 0;
   overflow: hidden;
   background: unset;
